fix the portfolio pagination on small screens

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1358,8 +1358,8 @@ img {
   }
 }
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
   .portfolio__container {
     overflow: hidden !important;
   }
-}
+} */
